# rudof

./: Cargo.toml
.github/workflows/: ci.yml  publish-wasm.yml
rbe/src/: rbe.rs  rbe_table.rs
rudof_cli/: Cargo.toml
rudof_generate/src/: conformance_metrics.rs  output.rs  parallel_generation.rs
rudof_generate/tests/: constraint_passthrough_tests.rs  debug_datatype_test.rs  debug_failing_test.rs  focused_constraint_tests.rs  generator_constraints_test.rs
rudof_lib/: Cargo.toml
rudof_lib/src/: form.rs  lib.rs  rudof.rs  rudof_config.rs
rudof_lib/src/api/conversion/implementations/: show_schema_conversion.rs
rudof_lib/src/api/data/builders/: load_data.rs
rudof_lib/src/api/data/implementations/: load_data.rs  serialize_data.rs  show_node_info.rs
rudof_lib/src/api/materialize/implementations/: materialize.rs
rudof_lib/src/api/query/implementations/: load_query.rs  run_query.rs  serialize_query_results.rs
rudof_lib/src/api/shacl/implementations/: load_shacl_schema.rs  serialize_shacl_schema.rs  serialize_shacl_validation_results.rs
rudof_lib/src/api/shex/implementations/: load_shapemap.rs
rudof_lib/src/formats/: data.rs  query.rs  shacl.rs  validation.rs
rudof_lib/src/types/: query.rs
rudof_lib/src/utils/: utils.rs
rudof_rdf/: Cargo.toml
rudof_rdf/src/: errors.rs  lib.rs  rdf_data_config.rs
rudof_rdf/src/backend/: mod.rs  (+2 more)
rudof_rdf_qlever/: Cargo.toml
rudof_rdf_qlever/src/: error.rs  graph_container.rs  index_builder.rs
rudof_rdf_qlever/tests/: qlever_docker.rs
rudof_rdf_viz/: Cargo.toml
rudof_rdf_viz/src/: errors.rs  lib.rs  rdf_visualizer_config.rs  visual_rdf_edge.rs  visual_rdf_graph.rs  visual_rdf_node.rs
rudof_rdf_viz/src/style/: arrow_style.rs  stereotype_style.rs  style.rs
rudof_rdf_viz/src/uml_converter/: uml_converter.rs
rudof_wasm/: .gitignore  Cargo.toml  README.md  build.sh
rudof_wasm/src/: dto.rs  lib.rs  project.rs  shapes.rs  validate.rs
shacl/: Cargo.toml
shacl/examples/: endpoint_validation.rs
shacl/src/: lib.rs
shacl/src/ast/: builder.rs  component.rs  error.rs  mod.rs  node_expr.rs  node_shape.rs  property_shape.rs  reifier_info.rs  schema.rs  shape.rs  visitor.rs
shacl/src/ir/: component.rs  error.rs  mod.rs  node_shape.rs  property_shape.rs  reifier_info.rs  schema.rs  shape.rs  test.rs  visitor.rs
shacl/src/ir/components/: max_count.rs  min_count.rs  mod.rs  pattern.rs
shacl/src/rdf/: error.rs  parser.rs  test.rs  writer.rs
shacl/src/rdf/parsers/: components.rs  state.rs  utils.rs
shacl/src/rdf/parsers/cardinality/: max_count.rs  min_count.rs
shacl/src/rdf/parsers/logical/: and.rs  not.rs  or.rs  xone.rs
shacl/src/rdf/parsers/non_shape/: deactivated.rs  message.rs  severity.rs
shacl/src/rdf/parsers/other/: closed.rs  has_value.rs  in_component.rs
shacl/src/rdf/parsers/property_pair/: disjoint.rs  equals.rs  less_than.rs  less_than_or_equals.rs
shacl/src/rdf/parsers/shape_based/: node.rs  property.rs  qualified_value_shape.rs  reifier_shape.rs
shacl/src/rdf/parsers/shape_type/: node_shape.rs  path.rs  property_shape.rs
shacl/src/rdf/parsers/sparql/: basic.rs
shacl/src/rdf/parsers/string_based/: language_in.rs  max_length.rs  min_length.rs  pattern.rs  unique_lang.rs
shacl/src/rdf/parsers/targets/: class.rs  implicit_class.rs  mod.rs  node.rs  objects_of.rs  subjects_of.rs
shacl/src/rdf/parsers/value_range/: max_exclusive.rs  max_inclusive.rs  min_exclusive.rs  min_inclusive.rs
shacl/src/rdf/parsers/value_type/: class.rs  datatype.rs  node_kind.rs
shacl/src/subset/: mod.rs  recording_rdf.rs
shacl/src/types/: closed_info.rs  message_map.rs  mod.rs  node_kind.rs  presentation.rs  severity.rs  shacl_path_serde.rs  target.rs  value.rs
shacl/src/validator/: config.rs  error.rs
shacl/src/validator/cache/: mod.rs
shacl/src/validator/constraints/: mod.rs  test.rs
shacl/src/validator/constraints/core/: basic_sparql.rs  mod.rs
shacl/src/validator/constraints/core/cardinality/: max_count.rs  min_count.rs  mod.rs
shacl/src/validator/constraints/core/logical/: and.rs  not.rs  or.rs  xone.rs
shacl/src/validator/constraints/core/non_shape/: deactivated.rs  mod.rs
shacl/src/validator/constraints/core/other/: closed.rs  has_value.rs  in_constraint.rs  mod.rs
shacl/src/validator/constraints/core/property_pair/: disjoint.rs  equals.rs  less_than.rs  less_than_or_equals.rs  mod.rs
shacl/src/validator/constraints/core/shape_based/: node.rs  qualified_value_shape.rs
shacl/src/validator/constraints/core/string_based/: language_in.rs  max_length.rs  min_length.rs  mod.rs  pattern.rs  unique_lang.rs
shacl/src/validator/constraints/core/value/: class.rs  datatype.rs  mod.rs  node_kind.rs
shacl/src/validator/constraints/core/value_range/: max_exclusive.rs  max_inclusive.rs  min_exclusive.rs  min_inclusive.rs  mod.rs
shacl/src/validator/constraints/sparql/: basic_validator.rs  mod.rs
shacl/src/validator/engine/: focus_nodes_ops.rs  mod.rs  native.rs  sparql.rs  validate.rs  value_nodes_ops.rs
shacl/src/validator/index/: class.rs
shacl/src/validator/iteration/: focus_node.rs  strategy.rs  value_node.rs
shacl/src/validator/nodes/: focus.rs  value.rs
shacl/src/validator/processor/: endpoint.rs  graph.rs  mod.rs  rdf_data.rs
shacl/src/validator/report/: mod.rs  result.rs
shacl/src/validator/store/: endpoint.rs  graph.rs  manager.rs
shacl/src/vocab/: mod.rs  shui.rs
shacl/tests/: subset_parity.rs
shacl/tests/common/: manifest.rs  test_instance.rs
shapes_comparator/src/: compare_schema_format.rs
shapes_converter/: Cargo.toml
shex_ast/src/: node.rs  shex_format.rs
shex_testsuite/src/: manifest_error.rs  manifest_validation.rs
shex_validation/src/: engine.rs  shex_config.rs  validator.rs  validator_config.rs  validator_error.rs
shex_validation/tests/: external_resolver_integration.rs
sparql_service/src/: class_partition.rs  dataset.rs  graph_collection.rs  graph_description.rs  named_graph_description.rs  property_partition.rs  query_config.rs  query_processor.rs  service_description.rs  service_description_error.rs  service_description_parser.rs
(+125 files in other folders)
