[package]
name = "rudof_lib"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/rudof_lib"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include = [
    "src/**/*.rs",
    "src/default_config.toml",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[features]
default = []

[dependencies]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
colored.workspace = true
crossterm.workspace = true
dctap.workspace = true
either.workspace = true
oxrdf = { workspace = true, features = ["oxsdatatypes"] }
rudof_iri.workspace = true
prefixmap.workspace = true
pgschema.workspace = true
rdf_config.workspace = true
reqwest.workspace = true
regex.workspace = true
rudof_generate.workspace = true
rudof_rdf.workspace = true
rudof_rdf_viz.workspace = true
serde.workspace = true
serde_json.workspace = true
shacl.workspace = true
shapes_comparator.workspace = true
shapes_converter.workspace = true
shex_ast.workspace = true
shex_validation.workspace = true
sparql_service.workspace = true
tabled.workspace = true
tracing.workspace = true
termtree.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true

# wasm: the curated `form` session façade builds on the same wasm-clean crates
# the binding used to depend on directly (shacl without the `sparql` feature,
# which runs the native engine and is wasm-buildable). No sparql_service/reqwest.
[target.'cfg(target_family = "wasm")'.dependencies]
oxrdf = { workspace = true }
prefixmap = { workspace = true }
rudof_iri = { workspace = true }
rudof_rdf = { workspace = true }
shacl = { path = "../shacl", default-features = false }
thiserror = { workspace = true }
