[package]
name = "rudof_wasm"
version.workspace = true
edition = "2021"
publish = false
license.workspace = true
readme = "README.md"
description = "wasm-bindgen bindings exposing rudof's SHACL/ShEx stack to JavaScript"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.120"
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# rudof crates resolve to the sibling workspace members (single version, no
# `[patch]`). `shacl`/`rudof_rdf` build without the `sparql` feature: that path
# is wasm-clean and runs the native engine (see shacl::validator).
oxrdf = { workspace = true }
prefixmap = { workspace = true }
rudof_iri = { workspace = true }
rudof_rdf = { workspace = true }
shacl = { path = "../shacl", default-features = false }
