[package]
name = "rudof_wasm"
version.workspace = true
edition = "2021"
publish = false
license.workspace = true
readme = "README.md"
description = "wasm-bindgen bindings exposing rudof's SHACL/ShEx stack to JavaScript"

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-pack reads this: run wasm-opt -Oz on the release build so the published
# .wasm stays small (the standard `release` profile + default -O leaves it ~0.8MB
# larger than -Oz). This replaces the old hand-rolled `wasm-release` cargo profile.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[dependencies]
wasm-bindgen = "=0.2.120"
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# The binding routes every GRAPH / VALIDATE / PROJECT / SERIALIZE operation
# through rudof's façade — it depends on `rudof_lib` alone (the wasm-capable
# `rudof_lib::form` surface) plus the wasm-bindgen/serde glue. The façade pulls
# in the wasm-clean SHACL/RDF stack (shacl without the `sparql` feature, which
# runs the native engine) so the binding no longer reaches into those internals.
rudof_lib = { path = "../rudof_lib" }
