[package]
name = 'shacl'
version.workspace = true
readme = "README.md"
authors.workspace = true
description = "A SHACL validator for RDF data, implemented in Rust."
documentation = "https://docs.rs/shacl"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["sparql"]
sparql = ["sparql_service/sparql", "rudof_rdf/sparql" ]

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
indoc.workspace = true
itertools.workspace = true
rudof_iri.workspace = true
petgraph.workspace = true
prefixmap.workspace = true
rudof_rdf.workspace = true
serde.workspace = true
sparql_service.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

# rayon needs OS threads; keep it out of the wasm build (validation runs
# sequentially there — see validator/processor).
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rayon.workspace = true

[dev-dependencies]
oxrdf = { workspace = true, features = [ "oxsdatatypes" ] }
serde_json.workspace = true
